web/projects/portal/src/app/vsobjects/objects/selection/selection-list-cell.component.scss
/*!
 * This file is part of StyleBI.
 * Copyright (C) 2024  InetSoft Technology
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
.selection-list-cell {
  position: relative;
  overflow: hidden;
  display: flex;

  .selection-list-cell-container {
    display: table;
    vertical-align: middle;
    width: 100%;
    height: 100%;
    margin-left: 2px;

    .label-container {
      display: table-cell;
      height: auto;

      .icon-label-content {
        display: flex;
        align-items: center;

        .mobile-max-mode-icon {
          font-size: 24px !important;
        }

        .selection-list-icon-layout {
          z-index: 5;
          opacity: 1;
          padding-right: 1px;

          &.icon-disabled {
            pointer-events: auto;
          }
        }

        .selection-list-cell-label {
          overflow: hidden;
          display: flex;
          align-items: center;
          height: 100%;
          min-height: 15px;
          padding-right: 4px;
          padding-left: 2px;

          .selection-value {
            display: flex;
            align-items: center;
            min-width: 0;
            overflow: hidden;
          }
        }
      }
    }

    .selection-list-cell-content {
      flex-grow: 1;
      padding-left: 2px;
      width: 100%;
      height: 100%;
      display: flex;
      align-items: center;

      .selection-list-measure-text {
        position: absolute;
        overflow: hidden;
        top: 0;
        text-align: right;
        white-space: nowrap;
        height: 100%;
        display: flex;
        align-items: center;
      }

      .selection-list-bar-outer {
        position: absolute;
        top: 0;
        right: 0;
        height: 100%;

        .selection-list-bar-inner {
          position: absolute;
          height: 1em;

          .measure-bar, .measure-n-bar {
            height: inherit;
          }
        }
      }
    }
  }
}

.selection-list-bar-outer.resize-border, .selection-list-cell.resize-border {
  border-style: solid;
  border-color: black;
  border-width: 1px;
}

.selection-list-bar-baseline {
  position: absolute;
  border-right: 1px solid #CFCFCF;
}

.unselectable-icon {
  opacity: 0.6;
}

.resize-zone {
  position: absolute;
  width: 5px;
  top: 0;
  bottom: 0;
  cursor: e-resize;
}

.left {
  left: 0;
}

.right {
  right: 0;
}

.resize-label {
  position: absolute;
  left: 50%;
  bottom: 0;
  min-width: 35px;
  min-height: 16px;
  background: gray;
  color: white;
  vertical-align: middle;
  text-align: center;
  padding: 2px;
}

